prevent some layout jump due to border when toggling between dark / light themes

--- a/pages/cv/cv.module.scss
+++ b/pages/cv/cv.module.scss
@@ -138,6 +138,7 @@
   margin-right: 1rem;
   border-radius: 0.25rem;
   overflow: hidden;
+  border: 0.25rem solid transparent;
 
   @include active-theme('dark') {
     @include themed('border', '0.25rem solid $0', 'page-fg');
